# ai-engineer-training

./: .gitignore
projects/project1_2/: requirements.txt
projects/project1_2/utils/: retry.py
week01/code/: 04-2ToolCalls.py  06-llamaindex.py  08-MultiAgent.py  aa-longchain_models.py
week02/: p16_tokenizers.py
week03-homework/: .env.example  pyproject.toml
week03-homework-2/: .env.example  docker-compose.yml  pyproject.toml
week03-homework-2/data/: companies.txt  faqs.csv
week03-homework-2/graph_rag/: api.py  config.py  graph_builder.py  main.py  query_engine.py  report.md
week03-homework-2/milvus_faq/: api.py  config.py  index_manager.py  main.py  report.md
week03-homework/chunking_research/: main.py  report.md
week03-homework/data/: 1-FinGPT-Finance.md  2-RT2-Robotics.md  3-MedPaLM-Medicine.md
week03-homework/ocr_research/: main.py  report.md
week03/code/: p17-LlamaIndex初步.ipynb  p18-logging.py  p22-node.ipynb  p23如何增加自己的loader.ipynb  p32-后处理器.py
week04-homework/: .env.example  pyproject.toml
week04-homework/smart_customer_service/: api.py  base_chain.py  date_context.py  graph.py  main.py  report.md  report_en.md  services.py
week04-homework/smart_customer_service/tools/: __init__.py  order_tools.py  time_tool.py
week04-homework/tests/: test_features.py
week05-homework/: .env.example  README.md  pyproject.toml
week05-homework/multi-agent/: __init__.py  main.py  report.md
week05-homework/multi-agent/langgraph_app/: __init__.py  graph.py  length.py  nodes.py  retry.py  state.py
week05-homework/multi-agent/mcp_server/: __init__.py  main.py  prompts.py
week05-homework/tests/: test_retry.py
week11-homework/: .env.example  DESIGN.md  README.md  game_replay_sample.md  pyproject.toml  streamlit_app.py
week11-homework/werewolf/: __init__.py  agents.py  app.py  config.py  graph.py  logger.py  main.py  memory.py  models.py  prompts.py  tracing.py
