[project]
name = "week03-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"python-dotenv",
	"llama-index>=0.14.2",
	"llama-index-core>=0.14.2",
	"llama-index-llms-openai>=0.5.6",
	"llama-index-embeddings-openai>=0.5.1",
	"pandas>=2.2.3",
	"tabulate>=0.9.0",
	# add your dependencies here and run `uv sync` to install them
]
