[project]
name = "week05-homework"
version = "0.1.0"
description = "MCP-based multi-agent article writing system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"cryptography<49",
	"ddgs",
	"fastmcp",
	"langchain-mcp-adapters",
	"langchain-openai",
	"langgraph",
	"python-dotenv",
]

[dependency-groups]
dev = [
	"pytest",
	"pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
